<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".CardFinding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/card" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:text="@string/player_name" />

                <TextView
                    android:id="@+id/game_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:text="@string/high_score"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/personal_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:text="@string/personal_best"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/overall_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:text="@string/overall_score"/>

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:text="@string/score"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/game_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_count"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/textview"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_marginBottom="45dp"
                    android:text="@string/current_game" />

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cover"
                    android:contentDescription="@string/hate"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="10sp"
        >

        <ImageView
            android:id="@+id/ishka"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:src="@drawable/ishka"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/hate" />

        <ImageView
            android:id="@+id/love"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="193dp"
            android:src="@drawable/love"
            android:contentDescription="@string/love" />

        <ImageView
            android:id="@+id/dice"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="107dp"
            android:src="@drawable/dice"
            android:contentDescription="@string/neutral" />

        <ImageView
            android:id="@+id/clubs"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/clubs"
            android:contentDescription="@string/try_again" />
    </RelativeLayout>

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:textColor="#ffffff"
        android:text="@string/select"
        android:padding="5dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:padding="7dp">

        <Button
            android:id="@+id/done"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="ButtonStyle"
            android:visibility="visible"/>

        <Button
            android:id="@+id/startGame"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/retry"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button"
            android:text="@string/retry"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />

    </RelativeLayout>
    </LinearLayout>

</LinearLayout>