<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/game_name">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/login_text"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_text"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/msg"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
        android:id="@+id/emaill"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:allowUndo="true"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="5sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        android:background="@drawable/registration_text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:allowUndo="true"
        android:hint="@string/password"
        android:background="@drawable/registration_text"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        tools:ignore="LabelFor,TextFields"
        android:layout_marginBottom="10sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:clickable="true"
            tools:ignore="RtlCompat,RtlHardcoded"
            android:focusable="true" />

    <Button
        android:id="@+id/registration"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#DD0F42"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>